@@ -5,8 +5,6 @@ SHORT TERM STUFF (this section should always be empty in a release version!)
 
 - stronghold patches [Todd R. Eigenschink <todd@tekinteractive.com>]
 
-- Andrew Ford's Apache::FakeRequest patch
-
 - <Perl>/%Apache::ReadConfig:: brokeness (My::configure() example, Eric Cholet)
 
 - sort out =pod configuration directives
